# ansible-dims-playbooks

./: .bumpversion.cfg  .d2  .gitignore  README.rst
cli/: .gitignore  Makefile  README.rst  pip-requirements.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
cli/d2/: __init__.py  about.py  main.py  utils.py
cli/d2/project/: __init__.py  create.py  delete.py  list.py  ping.py
cli/docs/: .gitignore  conf.py  index.rst  installation.rst  test-bats-runtime.txt  test-bats.txt  test-tox.txt  usage.rst
cli/tests/: 00_help.bats  runtime.bats  test_helper.bash
deploy/: README.md
deploy/do/: .gitignore  Makefile  README.md  create-provider.tf.yml  diffs.ansible_cfg  do.bats  master.yml  provider.tf.j2  requirements.txt  user-data  user-data.j2
deploy/pulumi-aws/: Makefile  __main__.py
deploy/pulumi-aws-demo/: .gitignore  Makefile  Pulumi.yaml  hosts.yml  requirements.txt  user-data.j2  user-data.txt  utils.py
do/dims/: .gitignore  Makefile  README.md  create-provider.tf.yml  create-tf.yml  do.bats  do_post.sh  generate-inventory.awk  master.yml  nodes-droplets.yml  provider.tf.j2  tf-template.j2
dockerfiles/: .gitignore  Makefile  Makefile.container
environments/: 000_cross_env_vars.yml
filter_plugins/: dims_filters.py
handlers/: restart_services.yml
inventory/: all.yml
lookup_plugins/: dims_function.py  dkim_txt_record.py  psec.py
playbooks/: base_playbook.yml  base_task.yml  base_template.yml  bootstrap.yml  certbot-installcert.yml  do_provision.yml  do_rekey.yml  host_reboot.yml  letsencrypt_backup.yml  postgresql_backup.yml  postgresql_restore.yml  swarm.yml  trident_backup.yml  trident_restore.yml
tasks/: append-lists.yml  build-trident.yml  configure-trident-2.yml  configure-trident-password.yml  configure-trident.yml  get_backups.yml  hostname.yml  install-bats-tests.yml  install-certbot-auto.yml  install-certbot-certs.yml  install-go.yml  install-shflags.yml  iptables.yml  letsencrypt_backup.yml  letsencrypt_generate.yml  packages.yml  postfix_basic.yml  postgresql_backup.yml  postgresql_restore.yml  pre_tasks.yml  ssh-add-known-hosts.yml  trident_backup.yml  trident_restore.yml
vars/: global.yml
(+365 files in other folders)
