[bumpversion]
current_version = 19.10.0
commit = True
tag = True

[bumpversion:file:VERSION]

[bumpversion:file:Makefile]

[bumpversion:file:d2/__init__.py]

[bdist_wheel]
universal = 1

[metadata]
description-file = README.rst
name = d2

[flake8]
format = wemake
show-source = True

[yapf]
based_on_style = pep8
spaces_before_comment = 4
split_before_logical_operator = true
