[bumpversion]
current_version = 19.10.0
commit = True
tag = True

[bumpversion:file:VERSION]

[bumpversion:file:Makefile]

[bumpversion:file:d2/__init__.py]

[bdist_wheel]
universal = 1

[metadata]
description-file = README.rst
name = d2

[flake8]
format = wemake
show-source = True
ignore =
    # CC812  missing trailing comma
    C812,
    # E800: Found commented out code (ironic, eh?)
    E800,
    # WPS201 Found module with too many imports
    WPS201,
    # WPS202 Found too many module members
    WPS202,
    # WPS204 Found overused expression
    WPS204,
    # WPS213 Found too many expressions
    WPS213,
    # WPS230 Found too many public instance attributes
    WPS230,
    # WPS331 Found local variable that are only used in `return` statements
    WPS331,
    # WPS407 Found mutable module constant
    WPS407,
    # WPS410 Found wrong metadata variable
    WPS410,
    # WPS412 Found `__init__.py` module with logic
    WPS412,
    # WPS432 Found magic number
    WPS432,
    # WPS504 Found negated condition
    WPS504,
per-file-ignores =
    d2/utils.py:WPS100,WPS220,WPS226,WPS440
    # WPS100 Found wrong module name
    # WPS220 Found too deep nesting:
    # WPS226 Found string constant over-use
    d2/project/__init__.py:WPS440,WPS441
    # WPS440 Found block variables overlap
    # WPS441 Found control variable used after block
format = default
show-source = False
exclude =
    # git folder
    .git,
    # python cache
    __pycache__,
# Provide a comma-separate list of glob patterns to include for checks.
filename =
    *.py
select =
    E,
    W,
    F,
    C

[yapf]
based_on_style = pep8
spaces_before_comment = 4
split_before_logical_operator = true
